[package]
name = "aoc-2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
dotenv = "0.15"
clap = { version = "4.0.26", features = ["derive"] }
log = "0.4"
nom = "7.1.1"
env_logger = "0.10"
chrono = "0.4.31"
ureq = { version = "2.9.1", features = ["cookies"] }
cookie_store = "0.20.0"
url = "2.5.0"
chrono-tz = "0.8.4"
